@@ -7,6 +7,8 @@
 * Removed unused backend.external.buildParameters function.
 * Fixed parameters in external backend.
 * Fixed failing test in bindings backend.
+* Fixed graph formatting.
+* More external backend fixes.
 
 2009.07.02
 
